--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Editor artifacts
+*~
+.*.sw[poqr]
+
 # C extensions
 *.so
 
@@ -26,6 +30,12 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# VirtualEnv
+Include/
+Scripts/
+bin/
+tcl/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
